--- a/index.css
+++ b/index.css
@@ -84,7 +84,7 @@ margin-top:50px;
     margin-top:50px;
 
 }
-#stay:restart {
+#restart:hover {
     box-shadow: 0 1px 10px 0 rgba(0,0,0,0.24),0 10px 100px 0 rgba(0,0,0,0.19);
 }
 
@@ -100,3 +100,20 @@ img {
   img:hover{
     transform: translateY(-2px);
   }
+
+  #new-hand {
+    width: 100px;
+    height: 50px;
+    border-radius: 8px;
+    background-color:blueviolet;
+    color: aliceblue;
+    padding: 1px;
+    border: 2px solid black;
+    font-size: 15px;
+    
+    margin-top:50px;
+
+}
+#new-hand:hover {
+    box-shadow: 0 1px 10px 0 rgba(0,0,0,0.24),0 10px 100px 0 rgba(0,0,0,0.19);
+}
