--- a/home.css
+++ b/home.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
     background-size:cover;
     color:aliceblue;
-    background: linear-gradient(-45deg, #000000, #0F5626);
+    background: linear-gradient(-45deg, #000000, #0a3818);
 	  background-size: 400% 400%;
 }
 
