--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ font-family: Georgia, serif;
 text-align: center;
 background-repeat: no-repeat;
 color:aliceblue;
-background: linear-gradient(-45deg, #000000, #0F5626);
+background: linear-gradient(-45deg, #000000, #0a3818);
 background-size: 400% 400%;
 }
 
@@ -17,6 +17,7 @@ padding: 1px;
 border: 2px solid black;
 font-size: 15px;
 margin-top:50px;
+display:none;
 }
 
 #hit:hover {
@@ -37,6 +38,7 @@ padding: 1px;
 border: 2px solid black;
 font-size: 15px;
 margin-top:50px;
+display: none;
 }
 
 #stay:hover {
@@ -64,26 +66,6 @@ margin: 1px;
     height: 150px;
     width: 100px;
     margin: 1px;
-
- 
-
-}
-
-#restart {
-    width: 100px;
-    height: 50px;
-    border-radius: 8px;
-    background-color:blueviolet;
-    color: aliceblue;
-    padding: 1px;
-    border: 2px solid black;
-    font-size: 15px;
-    
-    margin-top:50px;
-
-}
-#restart:hover {
-    box-shadow: 0 1px 10px 0 rgba(0,0,0,0.24),0 10px 100px 0 rgba(0,0,0,0.19);
 }
 
 img {
@@ -91,8 +73,7 @@ img {
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
     transform: translateY(0);
-    transition: transform 150ms
-    
+    transition: transform 150ms 
   }
 
   img:hover{
@@ -100,6 +81,7 @@ img {
   }
 
   #new-hand {
+    display: none;
     width: 100px;
     height: 50px;
     border-radius: 8px;
@@ -112,6 +94,7 @@ img {
     margin-top:50px;
 
 }
+
 #new-hand:hover {
     box-shadow: 0 1px 10px 0 rgba(0,0,0,0.24),0 10px 100px 0 rgba(0,0,0,0.19);
 }
